paginas criadas - baterias / fontes de engergia / interna / finalização da externa

--- a/src/image/desktop.ini
+++ b/src/image/desktop.ini
@@ -3,3 +3,6 @@ Captura de tela 2024-11-12 103929.png=@Captura de tela 2024-11-12 103929,0
 Captura de tela 2024-11-12 104141.png=@Captura de tela 2024-11-12 104141,0
 Captura de tela 2024-11-12 104130.png=@Captura de tela 2024-11-12 104130,0
 Captura de tela 2024-11-12 105521.png=@Captura de tela 2024-11-12 105521,0
+Captura de tela 2024-11-13 180015.png=@Captura de tela 2024-11-13 180015,0
+Captura de tela 2024-11-13 180050.png=@Captura de tela 2024-11-13 180050,0
+Captura de tela 2024-11-13 180032.png=@Captura de tela 2024-11-13 180032,0
